' Generated by UML Generator
' Encoded: ZLDDJ-Cm4BtdLrZYaYuoMgxHRaNfQWMYXsfPn05nc3f3EiAn8tj2by_VZbEdgLi4sakKl9bvx_bvSk8P7BUrplmzcGOSr49fy7x2x6ZHCfuhQoxf2SNtR4ab2aLEQSmoCepk3XIAgQqRQz3mDV5oQWF-ZrlGPwWRyPm9yUQNTjLzvQD2F5WgizSiWuLd1ugZsfPZFN70rcgcvczWAiHbS6Ag3WvM6CYWAyHqynfmASFZyBzK-g6eefQaIuUc43Fo_6FmC1O_XS6Lc3W7Z-lIE1yDEb2M-NgosBfE9AFIQSjipLf6QbYWJeuHQM97lbFiH0uhv5a7TkVePmRQEHZKqNnjovZnNaYVXn4fVX5eMqME5TtJ72gy-ZDB6PXOumVAE9Zl54TVQqsQHfC2faqKTrQr7iiXjoJ2GKSv1CQhyu4kODRyFhx0nxb3xrFyEQmlateLTRZM75pbDyvkRXCts-qwEdePVxMmIQkKusJBjgiZPKgH5AoK2Tvlm5vtlC0Ut73tLxA7fk5zsw4-GLE6N_OT
' URL: http://www.plantuml.com/plantuml/uml/ZLDDJ-Cm4BtdLrZYaYuoMgxHRaNfQWMYXsfPn05nc3f3EiAn8tj2by_VZbEdgLi4sakKl9bvx_bvSk8P7BUrplmzcGOSr49fy7x2x6ZHCfuhQoxf2SNtR4ab2aLEQSmoCepk3XIAgQqRQz3mDV5oQWF-ZrlGPwWRyPm9yUQNTjLzvQD2F5WgizSiWuLd1ugZsfPZFN70rcgcvczWAiHbS6Ag3WvM6CYWAyHqynfmASFZyBzK-g6eefQaIuUc43Fo_6FmC1O_XS6Lc3W7Z-lIE1yDEb2M-NgosBfE9AFIQSjipLf6QbYWJeuHQM97lbFiH0uhv5a7TkVePmRQEHZKqNnjovZnNaYVXn4fVX5eMqME5TtJ72gy-ZDB6PXOumVAE9Zl54TVQqsQHfC2faqKTrQr7iiXjoJ2GKSv1CQhyu4kODRyFhx0nxb3xrFyEQmlateLTRZM75pbDyvkRXCts-qwEdePVxMmIQkKusJBjgiZPKgH5AoK2Tvlm5vtlC0Ut73tLxA7fk5zsw4-GLE6N_OT
' Generated on: 2026-02-06T16:15:52.881210634

@startuml
skinparam classAttributeIconSize 0
hide circle

interface ComponentWithContextualHelp {
  ~showHelp(): void
}

abstract class Component {
  #tooltipText: String
  #container: Container
  --
  +showHelp(): void
}

abstract class Container {
  #children: List<Component> = new ArrayList<>()
  --
  +add(child: Component): void
}

class Button {
  -label: String
  --
  +Button(label: String)
  +getLabel(): String
}

class Panel {
  #modalHelpText: String
  --
  +showHelp(): void
}

class Dialog {
  #wikiPageURL: String
  -title: String
  --
  +Dialog(title: String)
  +showHelp(): void
}

class Application {
  -focusedComponent: Component
  --
  +createUI(): void
  +onF1KeyPress(): void
  +{static} main(args: String[]): void
}

Component ..|> ComponentWithContextualHelp
Component --> Container
Container --|> Component
Container o-- Component
Button --|> Component
Panel --|> Container
Dialog --|> Container
Application *-- Component
@enduml